# File-Synchronizer

./: .gitignore  CMakeLists.txt  README.md  commands.cpp  main.cpp
DataBase/: CMakeLists.txt
DataBase/include/: database.h  machine.h  transactionjournal.h  user.h  usermanager.h  versionmanager.h
DataBase/tests/: CMakeLists.txt  machine_class_test.cpp  transactionjournal_test.cpp
File_Synchronizer_lib/: CMakeLists.txt
File_Synchronizer_lib/Backend/: CMakeLists.txt
File_Synchronizer_lib/Backend/include/: ApplicationController.h  CommandReader.h  DataBaseController.h  DataBaseWrapper.h  FileNames.h  FileStat.h  FileStatus.h  FileWatcher.h  FileWatcher.hpp  FileWatcherException.h  IMediator.h  SyncController.h  VersionManagerWrapper.h  data_base_controller.h  local_data.h  synch_controller.h
File_Synchronizer_lib/Backend/src/: ApplicationController.cpp  CommandReader.cpp  DataBaseController.cpp  DataBaseWrapper.cpp  FileNames.cpp  FileWatcher.cpp  FileWatcherException.cpp  SyncController.cpp  VersionManagerWrapper.cpp  data_base_controller.cpp  local_data.cpp  synch_controller.cpp
File_Synchronizer_lib/Backend/tests/: CMakeLists.txt  FileWatcherTests.cpp  main.cpp
File_Synchronizer_lib/DataBase/: CMakeLists.txt
File_Synchronizer_lib/DataBase/include/: FileException.h  FileManager.h  Transaction.h  TransactionJournal.h  VersionCreator.h  VersionManager.h  database.h  file.h  file_info_filemanager.h  filemanager.h  filemanagers.hpp  i_filemanager.h  logger.h  machine.h  machine_info_filemanager.h  transaction.h  transactionjournal.h  user.h  user_info_filemanager.h  version.h  versioncreator.h  versionmanager.h
File_Synchronizer_lib/DataBase/include/JournalWriter/: Writer.h  WriterImpl.h  WriterJSON.h
File_Synchronizer_lib/DataBase/src/: FileManager.cpp  TransactionJournal.cpp  VersionCreator.cpp  VersionManager.cpp  Writer.cpp  WriterJSON.cpp  database.cpp  file.cpp  file_info_filemanager.cpp  filemanager.cpp  filemanagers.hpp  logger.cpp  machine.cpp  machine_info_filemanager.cpp  transaction.cpp  transactionjournal.cpp  user.cpp  user_info_filemanager.cpp  version.cpp  versioncreator.cpp  versionmanager.cpp
File_Synchronizer_lib/DataBase/tests/: CMakeLists.txt  fileinit_for_tests.hpp  filesystem_imitation.hpp  logger_test.cpp  logging_test.cpp  main.cpp  object_classes_test.cpp  version_creator_test.cpp  version_manager_test.cpp
File_Synchronizer_lib/Dispatcher_client/: CMakeLists.txt
File_Synchronizer_lib/Dispatcher_client/include/: class.h
File_Synchronizer_lib/Dispatcher_client/src/: class.cpp
File_Synchronizer_lib/Dispatcher_client/tests/: CMakeLists.txt  main.cpp
File_Synchronizer_lib/Dispatcher_server/: CMakeLists.txt
File_Synchronizer_lib/Dispatcher_server/cmake/: FindSQLite3.cmake
File_Synchronizer_lib/Dispatcher_server/include/: class.h
File_Synchronizer_lib/Dispatcher_server/src/: class.cpp
File_Synchronizer_lib/Dispatcher_server/tests/: CMakeLists.txt  Database.db  main.cpp
File_Synchronizer_lib/LogParser/: CMakeLists.txt
File_Synchronizer_lib/LogParser/include/: LogParser.h
File_Synchronizer_lib/LogParser/src/: LogParser.cpp
File_Synchronizer_lib/include/: IFileManager.h  ILogParser.h  IVersionCreator.h  IVersionManager.h  iFileManager.h  iVersionManager.h
File_Synchronizer_lib/p2p_client/: CMakeLists.txt
File_Synchronizer_lib/p2p_client/include/: p2p_client.h  socket.h
File_Synchronizer_lib/p2p_client/src/: p2p_client.cpp  socket.cpp
File_Synchronizer_lib/p2p_client/tests/: CMakeLists.txt  main.cpp
File_Synchronizer_lib/p2p_server/: CMakeLists.txt
File_Synchronizer_lib/p2p_server/include/: connections.h  ip_list.h  p2p_server.h
File_Synchronizer_lib/p2p_server/src/: connections.cpp  ip_list.cpp  p2p_server.cpp
File_Synchronizer_lib/p2p_server/tests/: CMakeLists.txt  main.cpp
